--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
-
+    
     <integer-array name="tab_ids">
         <item>@android:id/tabcontent</item>
         <item>@id/tab_bg_view_divid</item>
@@ -17,4 +17,8 @@
         <item>@id/tab_right_btn1</item>
         <item>@id/tab_center_btn</item>
     </integer-array>
+    
+    <string name="find">发现</string>
+    <string name="square_nodate">世界太安静，环没有数据</string>
 </resources>
+
